--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <li>Node.js ( <a href="https://nodejs.org/en/download/">Instrucciones para Instalar Node y npm</a> )</li>
 </ul>
 
-<p>Para comprobar que la installacion es correcta en la Termianl (Command en Win) executar lo siguiente : </p>
+<p>Para comprobar que la installacion es correcta en la Terminal (Command Line en Windows) executar lo siguiente : </p>
 
 <div class="highlight highlight-source-shell"><pre>$ node --version 
 v0.4.2
