Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
 <li>Git  ( <a href="http://git-scm.com/">Instrucciones para Instalar Git</a> )</li>
 <li>Crear una perfil en GitHub ( <a href="https://github.com/">Github.com</a> )</li>
 <li>Node.js ( <a href="https://nodejs.org/en/download/">Instrucciones para Instalar Node y npm</a> )</li>
+<li>Cywin ( <a href="http://cygwin.com/install.html">Installacion para Win solamente</a> )</li>
 </ul>
 
-<p>Para comprobar que la installacion es correcta en la Terminal (Command Line en Windows) executar lo siguiente : </p>
+<p>Para comprobar que la installacion es correcta en la Termianl (Command en Win) executar lo siguiente : </p>
 
 <div class="highlight highlight-source-shell"><pre>$ node --version 
 v0.4.2
